--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Memory Game!</h1>
-    <div id="game">
+    <div class="container">
+      <h1>Pick Your Card!</h1>
+      <div id="button-container" class="button-container"></div>
     </div>
+    <div id="game" class="card-container card"></div>
     <script src="script.js"></script>
   </body>
 </html>
+
